Ajout de tous mes fichiers

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <meta http-equiv="refresh" content="0;url=accueil.html">
+    <title>Redirection vers la page d'accueil</title>
 </head>
 <body>
-    <h1>Bienvenue sur mon site !</h1>
-    <p>Ceci est la page d'accueil.</p>
+    Si vous n'êtes pas redirigé, <a href="accueil.html">cliquez ici</a>.
 </body>
 </html>
