Ajout de tous mes fichiers

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=accueil.html">
+    <meta http-equiv="refresh" content="0;url=templates/accueil.html">
     <title>Redirection vers la page d'accueil</title>
 </head>
 <body>
-    Si vous n'êtes pas redirigé, <a href="accueil.html">cliquez ici</a>.
+    Si vous n'êtes pas redirigé, <a href="templates/accueil.html">cliquez ici</a>.
 </body>
 </html>
