Déplacement des fichiers HTML à la racine et mise à jour des liens

--- a/accueil.html
+++ b/accueil.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
 {% extends "base.html" %}
 
-{% block content %}
-
+{% block styles %}
 <style>
     .video-content h1, .video-content p, .video-content .btn {
         color: #ffffff; /* Couleur blanche */
     }
 </style>
+{% endblock %}
+
+{% block content %}
 
 <div class="video-background">
     <video autoplay loop muted>
