--- a/module1.html
+++ b/module1.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+<html lang="fr">
 {% block content %}
 <div class="container mt-5">
     <h1>Les règles du séminaire</h1>
