Mise à jour des fichiers pour GitHub Pages

--- a/accueil.html
+++ b/accueil.html
@@ -9,10 +9,9 @@
 {% endblock %}
 
 {% block content %}
-
 <div class="video-background">
     <video autoplay loop muted>
-        <source src="./static/videos/votre_video.mp4" type="video/mp4">
+        <source src="{{ url_for('static', filename='videos/votre_video.mp4') }}" type="video/mp4">
         Votre navigateur ne supporte pas la lecture de vidéos.
     </video>
 </div>
@@ -27,8 +26,8 @@
                 L'équipe Naka Conseil
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="./module2.html">Organigramme</a>
-                <a class="dropdown-item" href="./trombinoscope.html">Trombinoscope</a>
+                <a class="dropdown-item" href="{{ url_for('module2') }}">Organigramme</a>
+                <a class="dropdown-item" href="{{ url_for('trombinoscope') }}">Trombinoscope</a>
             </div>
         </div>
     </div>
@@ -39,12 +38,11 @@
                 Le séminaire 2023 - 2024
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
-                <a class="dropdown-item" href="./module1.html">Règles de vie</a>
-                <a class="dropdown-item" href="./module3.html">Déroulé du séminaire</a>
-                <a class="dropdown-item" href="./ressource.html">Personne ressource</a>
+                <a class="dropdown-item" href="{{ url_for('module1') }}">Règles de vie</a>
+                <a class="dropdown-item" href="{{ url_for('module3') }}">Déroulé du séminaire</a>
+                <a class="dropdown-item" href="{{ url_for('ressource') }}">Personne ressource</a>
             </div>
         </div>
     </div>
 </div>
-
 {% endblock %}
