--- a/accueil.html
+++ b/accueil.html
@@ -1,48 +1,72 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="fr">
 
-{% block styles %}
-<style>
-    .video-content h1, .video-content p, .video-content .btn {
-        color: #ffffff; /* Couleur blanche */
-    }
-</style>
-{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intranet Professionnel</title>
 
-{% block content %}
-<div class="video-background">
-    <video autoplay loop muted>
-        <source src="{{ url_for('static', filename='videos/votre_video.mp4') }}" type="video/mp4">
-        Votre navigateur ne supporte pas la lecture de vidéos.
-    </video>
-</div>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-<div class="container mt-5 text-center content video-content">
-    <h1>Bienvenue sur la page du séminaire Naka Conseil</h1>
+    <!-- Votre CSS personnalisé -->
+    <link rel="stylesheet" href="./static/css/styles.css">
 
-    <!-- Boutons côte à côte -->
-    <div class="d-inline-block">
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                L'équipe Naka Conseil
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="{{ url_for('module2') }}">Organigramme</a>
-                <a class="dropdown-item" href="{{ url_for('trombinoscope') }}">Trombinoscope</a>
+    <style>
+        .video-content h1,
+        .video-content p,
+        .video-content .btn {
+            color: #ffffff;
+            /* Couleur blanche */
+        }
+    </style>
+</head>
+
+<body>
+    <div class="video-background">
+        <video autoplay loop muted>
+            <source src="./static/videos/votre_video.mp4" type="video/mp4">
+            Votre navigateur ne supporte pas la lecture de vidéos.
+        </video>
+    </div>
+
+    <div class="container mt-5 text-center content video-content">
+        <h1>Bienvenue sur la page du séminaire Naka Conseil</h1>
+
+        <!-- Boutons côte à côte -->
+        <div class="d-inline-block">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    L'équipe Naka Conseil
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="module2.html">Organigramme</a>
+                    <a class="dropdown-item" href="trombinoscope.html">Trombinoscope</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-inline-block ml-3">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuRules" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Le séminaire 2023 - 2024
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
+                    <a class="dropdown-item" href="module1.html">Règles de vie</a>
+                    <a class="dropdown-item" href="module3.html">Déroulé du séminaire</a>
+                    <a class="dropdown-item" href="ressource.html">Personne ressource</a>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="d-inline-block ml-3">
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuRules" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Le séminaire 2023 - 2024
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
-                <a class="dropdown-item" href="{{ url_for('module1') }}">Règles de vie</a>
-                <a class="dropdown-item" href="{{ url_for('module3') }}">Déroulé du séminaire</a>
-                <a class="dropdown-item" href="{{ url_for('ressource') }}">Personne ressource</a>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./static/js/scripts.js"></script>
+</body>
+
+</html>
