Mise à jour des fichiers pour GitHub Pages

--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="./static/css/styles.css">
 </head>
 <body>
-
 <div class="container mt-5">
+    <!-- Bouton d'accueil en haut à droite -->
+    <div class="text-right mb-4">
+        <a href="./accueil.html" class="btn btn-primary">Accueil</a>
+    </div>
+
     <h1 class="text-center mb-4">Trombinoscope</h1>
 
     <div class="row">
@@ -30,7 +34,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Justine_SYLLA.jpg" alt="Justine SYLLA" class="card-img-top">
+                <img src="./static/images/trombinoscope/Justine_Sylla.jpg" alt="Justine Sylla" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Justine SYLLA</h5>
                 </div>
@@ -39,7 +43,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Marina_FABRE.jpg" alt="Marina FABRE" class="card-img-top">
+                <img src="./static/images/trombinoscope/Marina_Fabre.jpg" alt="Marina FABRE" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Marina FABRE</h5>
                 </div>
@@ -48,7 +52,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Anaïs_MOREIRA.jpg" alt="Anaïs MOREIRA" class="card-img-top">
+                <img src="./static/images/trombinoscope/Anaïs_moreira.jpg" alt="Anaïs MOREIRA" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Anaïs MOREIRA</h5>
                 </div>
@@ -57,7 +61,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Axel_JUAN.jpg" alt="Axel JUAN" class="card-img-top">
+                <img src="./static/images/trombinoscope/Axel_juan.jpg" alt="Axel JUAN" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Axel JUAN</h5>
                 </div>
@@ -66,7 +70,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Sara_DUVAL.jpg" alt="Sara DUVAL" class="card-img-top">
+                <img src="./static/images/trombinoscope/Sara_Duval.jpg" alt="Sara DUVAL" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Sara DUVAL</h5>
                 </div>
@@ -84,7 +88,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Manon_DELBOULBES.jpg" alt="Manon DELBOULBES" class="card-img-top">
+                <img src="./static/images/trombinoscope/manon_delboulbes.jpg" alt="Manon DELBOULBES" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Manon DELBOULBES</h5>
                 </div>
@@ -93,7 +97,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Stephanie_BELLAHCENE.jpg" alt="Stephanie BELLAHCENE" class="card-img-top">
+                <img src="./static/images/trombinoscope/stephanie_bellahcene.jpg" alt="Stephanie BELLAHCENE" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Stephanie BELLAHCENE</h5>
                 </div>
@@ -102,7 +106,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Aurelie_CANDELON.jpg" alt="Aurelie CANDELON" class="card-img-top">
+                <img src="./static/images/trombinoscope/aurelie_candelon.jpg" alt="Aurelie CANDELON" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Aurélie CANDELON</h5>
                 </div>
@@ -111,7 +115,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Beverly_BOUDINAR.jpg" alt="Beverly BOUDINAR" class="card-img-top">
+                <img src="./static/images/trombinoscope/Beverly_boudinar.jpg" alt="Beverly BOUDINAR" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Beverly BOUDINAR</h5>
                 </div>
@@ -120,7 +124,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Ouarda_ZATOUT.jpg" alt="Ouarda ZATOUT" class="card-img-top">
+                <img src="./static/images/trombinoscope/ouarda_zatout.jpg" alt="Ouarda ZATOUT" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Ouarda ZATOUT</h5>
                 </div>
@@ -129,7 +133,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Solene_ROUSSELLE.jpg" alt="Solene ROUSSELLE" class="card-img-top">
+                <img src="./static/images/trombinoscope/solene_rousselle.jpg" alt="Solene ROUSSELLE" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Solene ROUSSELLE</h5>
                 </div>
@@ -138,7 +142,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Emma_CASTELLA.jpg" alt="Emma CASTELLA" class="card-img-top">
+                <img src="./static/images/trombinoscope/emma_castella.jpg" alt="Emma CASTELLA" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Emma CASTELLA</h5>
                 </div>
@@ -147,7 +151,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Lilian_MENAMENA.jpg" alt="Lilian MENA MENA" class="card-img-top">
+                <img src="./static/images/trombinoscope/lilian_menamena.jpg" alt="Lilian MENA MENA" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Lilian MENA MENA</h5>
                 </div>
@@ -165,7 +169,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Alice_MARAL.jpg" alt="Alice MARAL" class="card-img-top">
+                <img src="./static/images/trombinoscope/alice_maral.jpg" alt="Alice MARAL" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Alice MARAL</h5>
                 </div>
@@ -174,7 +178,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Lou_CATHALA.jpg" alt="Lou CATHALA" class="card-img-top">
+                <img src="./static/images/trombinoscope/Lou_cathala.jpg" alt="Lou CATHALA" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Lou CATHALA</h5>
                 </div>
@@ -183,7 +187,7 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
-                <img src="./static/images/trombinoscope/Thomas_CHMIELINSKI.jpg" alt="Thomas CHMIELINSKI" class="card-img-top">
+                <img src="./static/images/trombinoscope/Thomas_Chmielinski.jpg" alt="Thomas CHMIELINSKI" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Thomas CHMIELINSKI</h5>
                 </div>
