--- a/module2.html
+++ b/module2.html
@@ -1,16 +1,37 @@
-{% extends "base.html" %}
-
-{% block content %}
-<div class="container mt-5 text-center">
-    <!-- Bouton "retour à l'accueil" -->
-    <a href="/" class="btn btn-light mb-4">Retour à l'accueil</a>
-
-    <h1>L'organigramme Naka Conseil - rentrée 2023 !</h1>
-    <p class="lead">Consultez l'organigramme ci-dessous :</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Organigramme - Intranet Professionnel</title>
     
-    <iframe src="{{ url_for('static', filename='Organigramme.pdf') }}" width="100%" height="600px">
-        Il semble que votre navigateur ne supporte pas l'affichage des PDFs. <a href="{{ url_for('static', filename='mon_fichier.pdf') }}">Cliquez ici pour télécharger le PDF</a>.
-    </iframe>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Votre CSS personnalisé -->
+    <link rel="stylesheet" href="./static/css/styles.css">
+</head>
+<body>
+
+<!-- Bouton d'accueil en haut à droite -->
+<div class="container mt-2">
+    <a href="./index.html" class="btn btn-primary float-right">Accueil</a>
 </div>
 
-{% endblock %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Organigramme</h1>
+
+    <!-- L'affichage du PDF -->
+    <iframe src="./static/Organigramme.pdf" width="100%" height="600" frameborder="0"></iframe>
+    <p>Il semble que votre navigateur ne supporte pas l'affichage des PDFs. <a href="./static/Organigramme.pdf">Cliquez ici pour télécharger le PDF</a>.</p>
+
+</div>
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="./static/js/scripts.js"></script>
+
+</body>
+</html>
