Déplacement des fichiers HTML à la racine et mise à jour des liens

--- a/module2.html
+++ b/module2.html
@@ -15,15 +15,15 @@
 
 <!-- Bouton d'accueil en haut à droite -->
 <div class="container mt-2">
-    <a href="./index.html" class="btn btn-primary float-right">Accueil</a>
+    <a href="./accueil.html" class="btn btn-primary float-right">Accueil</a>
 </div>
 
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Organigramme</h1>
+    <h1 class="text-center mb-4">Organigramme Naka Conseil - Rentrée 2023 !</h1>
 
     <!-- L'affichage du PDF -->
     <iframe src="./static/Organigramme.pdf" width="100%" height="600" frameborder="0"></iframe>
-    <p>Il semble que votre navigateur ne supporte pas l'affichage des PDFs. <a href="./static/Organigramme.pdf">Cliquez ici pour télécharger le PDF</a>.</p>
+    <p>Envie de conserver le fichier ? <a href="./static/Organigramme.pdf">Cliquez ici pour télécharger le PDF</a>.</p>
 
 </div>
 
