--- a/ressource.html
+++ b/ressource.html
@@ -13,10 +13,11 @@
 </head>
 <body>
 
-{% block content %}
 <div class="container mt-5">
-    <!-- Bouton "retour à l'accueil" -->
-    <a href="/" id="retour" class="btn btn-light mb-4">Retour à l'accueil</a>
+   <!-- Bouton d'accueil en haut à droite -->
+    <div class="text-right mb-4">
+        <a href="./accueil.html" class="btn btn-primary">Accueil</a>
+    </div>
 
     <!-- Contenu de la page -->
     <h1>Le Concept de "Personne Ressource"</h1>
@@ -44,8 +45,6 @@
     </p>
 
 </div>
-
-{% endblock %}
 
 </body>
 </html>
