Déplacement des fichiers HTML à la racine et mise à jour des liens

--- a/accueil.html
+++ b/accueil.html
@@ -31,7 +31,9 @@
     </div>
 
     <div class="container mt-5 text-center content video-content">
-        <h1>Bienvenue sur la page du séminaire Naka Conseil</h1>
+        <h1>Bienvenue !</h1>
+
+<p class="text-white" style="font-size: smaller;">Ce site est destiné aux membres de l'équipe Naka Conseil. Afin de passer un agréable séminaire, il est mis à disposition de chacun </p>
 
         <!-- Boutons côte à côte -->
         <div class="d-inline-block">
