Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/accueil.html
+++ b/accueil.html
@@ -33,7 +33,8 @@
     <div class="container mt-5 text-center content video-content">
         <h1>Bienvenue !</h1>
 
-<p class="text-white" style="font-size: smaller;">Ce site est destiné aux membres de l'équipe Naka Conseil. Afin de passer un agréable séminaire, il est mis à disposition de chacun </p>
+<p class="text-white" style="font-size: larger;">Cet espace est destiné aux membres de l'équipe Naka Conseil. Il répertorie quelques informations générales sur l'évolution de l'équipe. Il permet aussi d'avoir des informations sur le séminaire à venir ! Bonne lecture :) </p>
+
 
         <!-- Boutons côte à côte -->
         <div class="d-inline-block">
