--- a/ressource.html
+++ b/ressource.html
@@ -24,24 +24,24 @@
 
     <h2>Qu'est-ce qu'une "personne ressource" ?</h2>
     <p>
-        La "personne ressource" est un membre volontaire du groupe qui agit comme un relais entre les intervenants et les participants durant le séminaire. Elle est dédiée à garantir que tous les participants soient à l'aise, informés et engagés.
+        La "personne ressource" est un membre volontaire du groupe qui agit comme un relais entre les intervenants et les participants durant le séminaire. Elle est dédiée à garantir que tous les participants soient à l'aise, informés et engagés. Ce rôle est à prendre pour une demi-journée, avant de passer le flambeau !
     </p>
 
     <h2>Rôle de la "personne ressource" :</h2>
     <ul>
-        <li>Liaison avec les intervenants : Assurer une communication fluide entre les participants et les animateurs ou conférenciers.</li>
+        <li>Liaison avec les intervenants : Assurer une communication fluide entre les participants et les animateurs.</li>
         <li>Rattrapage d'information : Si un participant manque une partie de l'atelier ou arrive en retard, la "personne ressource" prendra un moment pour le mettre à jour.</li>
         <li>Attention aux détails : Elle est attentive aux besoins et aux questions des participants, assurant que personne ne se sente perdu ou dépassé.</li>
     </ul>
 
     <h2>Pourquoi devenir une "personne ressource" ?</h2>
     <p>
-        Devenir une "personne ressource" est l'occasion de jouer un rôle central dans la réussite du séminaire. C'est une opportunité d'aider les autres, d'améliorer vos compétences en communication et de renforcer votre réseau professionnel.
+        Devenir une "personne ressource" est l'occasion de jouer un rôle central dans la réussite du séminaire. C'est une opportunité d'aider les autres, d'améliorer vos compétences en communication et de renforcer votre visibilité. Ca n'a aucun impact sur les primes de fin d'année ;)
     </p>
 
     <h2>Comment se porter volontaire ?</h2>
     <p>
-        Si vous êtes intéressé à devenir une "personne ressource", veuillez contacter [Nom de la personne/du département responsable]. Nous encourageons tout le monde, quel que soit son niveau ou son expérience, à envisager ce rôle enrichissant.
+        Si vous êtes intéressé à devenir une "personne ressource", veuillez le faire savoir dès le début du séminaire. Nous encourageons tout le monde, quel que soit son niveau ou son expérience, à envisager ce rôle enrichissant.
     </p>
 
 </div>
