--- a/accueil.html
+++ b/accueil.html
@@ -36,34 +36,41 @@
 <p class="text-white" style="font-size: larger;">Cet espace est destiné aux membres de l'équipe Naka Conseil. Il répertorie quelques informations générales sur l'évolution de l'équipe. Il permet aussi d'avoir des informations sur le séminaire à venir ! Bonne lecture :) </p>
 
 
-        <!-- Boutons côte à côte -->
-        <div class="d-inline-block">
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    L'équipe Naka Conseil
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="module2.html">Organigramme</a>
-                    <a class="dropdown-item" href="trombinoscope.html">Trombinoscope</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="d-inline-block ml-3">
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuRules" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Le séminaire 2023 - 2024
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
-                    <a class="dropdown-item" href="module1.html">Règles de vie</a>
-                    <a class="dropdown-item" href="module3.html">Déroulé du séminaire</a>
-                    <a class="dropdown-item" href="ressource.html">Personne ressource</a>
-                </div>
+    <!-- Boutons côte à côte -->
+    <div class="d-inline-block">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                L'équipe Naka Conseil
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="module2.html">Organigramme</a>
+                <a class="dropdown-item" href="trombinoscope.html">Trombinoscope</a>
             </div>
         </div>
     </div>
+
+    <div class="d-inline-block ml-3">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuRules" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Le séminaire 2023 - 2024
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
+                <a class="dropdown-item" href="module1.html">Règles de vie</a>
+                <a class="dropdown-item" href="module3.html">Déroulé du séminaire</a>
+                <a class="dropdown-item" href="ressource.html">Personne ressource</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Nouveau bouton pour "LinkedIn Conquest!" -->
+    <div class="d-inline-block ml-3">
+        <button class="btn btn-primary" type="button" onclick="location.href='module4.html'">
+            LinkedIn Conquest!
+        </button>
+    </div>
+</div>
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
