Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/accueil.html
+++ b/accueil.html
@@ -64,13 +64,19 @@
         </div>
     </div>
 
-    <!-- Nouveau bouton pour "LinkedIn Conquest!" -->
-    <div class="d-inline-block ml-3">
-        <button class="btn btn-primary" type="button" onclick="location.href='module4.html'">
-            LinkedIn Conquest!
-        </button>
+     <div class="d-inline-block ml-3">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuRules" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Let's Go LinkedIn !
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
+                <a class="dropdown-item" href="module4.html">LinkedIn Content Challenge</a>
+                <a class="dropdown-item" href="module5.html">Formation LinkedIn</a>
+            </div>
+        </div>
     </div>
-</div>
+
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
