Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -70,6 +70,16 @@
 
         <div class="col-md-3">
             <div class="card mb-4">
+                <img src="./static/images/trombinoscope/marienathalie_neri.jpg" alt="Marie Nathalie NERI" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Marie Nathalie NERI</h5>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-md-3">
+            <div class="card mb-4">
                 <img src="./static/images/trombinoscope/Sara_Duval.jpg" alt="Sara DUVAL" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Sara DUVAL</h5>
