Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module3.html
+++ b/module3.html
@@ -1,7 +1,26 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Découverte du lieu du séminaire</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            padding: 20px;
+            text-align: center;
+        }
+        img {
+            max-width: 80%;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
 
-{% block content %}
-<div class="container mt-5">
-    <!-- Vous pouvez ajouter le contenu de la page de photos ici -->
-</div>
-{% endblock %}
+<h1>En attendant de connaître le déroulé du séminaire...</h1>
+<p>Profitez d'en découvrir le lieu !</p>
+<img src="static/images/Lieu.jpeg" alt="Photo du lieu du séminaire">
+
+</body>
+</html>
