Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module1.html
+++ b/module1.html
@@ -13,20 +13,59 @@
 </head>
 <body>
 
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Règles de vie</h1>
-    <!-- Le contenu spécifique de module1.html ici -->
-</div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🎉 Règles de Vie du Séminaire 🎉</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            padding: 20px;
+        }
+        #backButton {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #f2f2f2;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
 
-<!-- Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="./static/js/scripts.js"></script>
+<button id="backButton" onclick="location.href='accueil.html'">Retour à l'accueil</button>
+
+<h1>🎉 Règles de Vie du Séminaire 🎉</h1>
+<p>
+    Avant de nous lancer dans cette aventure ensemble, prenons un instant pour établir quelques règles, qui s’appliqueront à tous lors de notre séminaire.
+</p>
+
+<ul>
+    <li><strong>Entraide</strong> : Si vous voyez une personne en difficulté (technique, intellectuelle ou existentielle), tendez-lui la main. Ou au moins, un cookie. 🍪</li>
+    <li><strong>Partage</strong> : Si vous avez une idée brillante, ne la gardez pas pour vous ! Le partage est une clé des succès collectifs.</li>
+    <li><strong>Écoute active</strong> : Je sais que je parle trop. Tenez bon !</li>
+    <li><strong>Respect des horaires</strong> : Soyez à l'heure ! Je me réserve le droit de distribuer des gages relativement embarrassants pour les retardataires. 🕺💃</li>
+    <li><strong>Bienveillance</strong> : Si quelqu’un dit quelque chose d'inintéressant, rappelez-vous, il y a des chances qu'il trouve vos remarques tout aussi inintéressantes. 😉</li>
+    <li><strong>Dress code</strong> : Les chaussettes dépareillées sont autorisées, mais seulement si elles sont assumées avec style ! Les croc top sont interdits pour les hommes.</li>
+    <li><strong>Gourmandise</strong> : Si vous piquez le dernier croissant, assurez-vous de le faire discrètement. Et sachez que le karma veille… 🥐</li>
+    <li><strong>Respect des espaces</strong> : Les moments de détente ne sont pas faits pour les réunions sérieuses. Et inversement, la salle de réunion n'est pas l'endroit pour vos siestes, aussi discrètes soient-elles.</li>
+    <li><strong>Feedback</strong> : Si vous avez une critique à formuler, assurez-vous qu'elle soit constructive, pertinente et, idéalement, drôle.</li>
+    <li><strong>Zéro téléphone</strong> : Lors des sessions de travail, on évite de consulter son téléphone toutes les 5 minutes. Cette règle ne s’applique pas à Romain.</li>
+</ul>
+
+<p>
+    En conclusion : Soyons sérieux quand il le faut, amusons-nous quand c'est possible et, surtout, soutenons-nous mutuellement. Après tout, c'est un séminaire, pas une émission de téléréalité !
+</p>
+
+<p>
+    Alors, prêts pour cette aventure ?! 🚀🌟
+</p>
 
 </body>
 </html>
 
- 
-
-{% endblock %}
