Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module1.html
+++ b/module1.html
@@ -38,30 +38,39 @@
 </head>
 <body>
 
-<button id="backButton" onclick="location.href='accueil.html'">Retour à l'accueil</button>
-
+<button id="backButton" onclick="location.href='accueil.html'">Accueil</button>
+<br><br>
 <h1>🎉 Règles de Vie du Séminaire 🎉</h1>
-<p>
+<p><br>
     Avant de nous lancer dans cette aventure ensemble, prenons un instant pour établir quelques règles, qui s’appliqueront à tous lors de notre séminaire.
 </p>
-
+<br>
 <ul>
     <li><strong>Entraide</strong> : Si vous voyez une personne en difficulté (technique, intellectuelle ou existentielle), tendez-lui la main. Ou au moins, un cookie. 🍪</li>
+<br>
     <li><strong>Partage</strong> : Si vous avez une idée brillante, ne la gardez pas pour vous ! Le partage est une clé des succès collectifs.</li>
+<br>
     <li><strong>Écoute active</strong> : Je sais que je parle trop. Tenez bon !</li>
+<br>
     <li><strong>Respect des horaires</strong> : Soyez à l'heure ! Je me réserve le droit de distribuer des gages relativement embarrassants pour les retardataires. 🕺💃</li>
+<br>
     <li><strong>Bienveillance</strong> : Si quelqu’un dit quelque chose d'inintéressant, rappelez-vous, il y a des chances qu'il trouve vos remarques tout aussi inintéressantes. 😉</li>
+<br>
     <li><strong>Dress code</strong> : Les chaussettes dépareillées sont autorisées, mais seulement si elles sont assumées avec style ! Les croc top sont interdits pour les hommes.</li>
+<br>
     <li><strong>Gourmandise</strong> : Si vous piquez le dernier croissant, assurez-vous de le faire discrètement. Et sachez que le karma veille… 🥐</li>
+<br>
     <li><strong>Respect des espaces</strong> : Les moments de détente ne sont pas faits pour les réunions sérieuses. Et inversement, la salle de réunion n'est pas l'endroit pour vos siestes, aussi discrètes soient-elles.</li>
+<br>
     <li><strong>Feedback</strong> : Si vous avez une critique à formuler, assurez-vous qu'elle soit constructive, pertinente et, idéalement, drôle.</li>
-    <li><strong>Zéro téléphone</strong> : Lors des sessions de travail, on évite de consulter son téléphone toutes les 5 minutes. Cette règle ne s’applique pas à Romain.</li>
+<br>
+    <li><strong>Zéro téléphone ou ordinateur</strong> : Lors des sessions de travail, on évite de consulter son téléphone toutes les 5 minutes. Cette règle ne s’applique pas à Romain.</li>
 </ul>
-
+<br><br>
 <p>
     En conclusion : Soyons sérieux quand il le faut, amusons-nous quand c'est possible et, surtout, soutenons-nous mutuellement. Après tout, c'est un séminaire, pas une émission de téléréalité !
 </p>
-
+<br><br>
 <p>
     Alors, prêts pour cette aventure ?! 🚀🌟
 </p>
