--- a/module3.html
+++ b/module3.html
@@ -19,8 +19,10 @@
 <body>
 
 <h1>En attendant de connaître le déroulé du séminaire...</h1>
+<br>
 <p>Profitez d'en découvrir le lieu !</p>
-<img src="static/images/Lieu.jpeg" alt="Photo du lieu du séminaire">
+<br>
+<img src="./static/images/Lieu.jpeg" alt="Photo du lieu du séminaire">
 
 </body>
 </html>
