Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module3.html
+++ b/module3.html
@@ -14,9 +14,21 @@
             max-width: 80%;
             margin-top: 20px;
         }
+        #accueilButton {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #f2f2f2;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
+
+<button id="accueilButton" onclick="location.href='accueil.html'">Accueil</button>
 
 <h1>En attendant de connaître le déroulé du séminaire...</h1>
 <br>
