Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module3.html
+++ b/module3.html
@@ -34,7 +34,7 @@
 <br>
 <p>Profitez d'en découvrir le lieu !</p>
 <br>
-<img src="./static/images/Lieu.jpeg" alt="Photo du lieu du séminaire">
+<img src="./Lieu.jpeg" alt="Photo du lieu du séminaire">
 
 </body>
 </html>
