--- a/module3.html
+++ b/module3.html
@@ -34,7 +34,7 @@
 <br>
 <p>Profitez d'en découvrir le lieu !</p>
 <br>
-<img src="./Lieu.jpeg" alt="Photo du lieu du séminaire">
+<img src="./votre_image1.jpeg" alt="votre_image1.jpeg">
 
 </body>
 </html>
