Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module3.html
+++ b/module3.html
@@ -34,7 +34,7 @@
 <br>
 <p>Profitez d'en découvrir le lieu !</p>
 <br>
-<img src="./votre_image1.jpeg" alt="votre_image1.jpeg">
+<img src="./Lieu.jpg" alt="Lieu probable (mais pas sur) du séminaire 2023">
 
 </body>
 </html>
