Mise à jour de la structure des dossiers pour refléter GitHub Pages

--- a/module3.html
+++ b/module3.html
@@ -36,5 +36,15 @@
 <br>
 <img src="./Lieu.jpg" alt="Lieu probable (mais pas sur) du séminaire 2023">
 
+       <div class="col-md-3">
+            <div class="card mb-4">
+                <img src="./static/images/trombinoscope/Romain_GROTTO.jpg" alt="Romain GROTTO" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Romain GROTTO</h5>
+                </div>
+            </div>
+        </div>
+
+
 </body>
 </html>
